syntax = "proto3";
import "Protos/google/api/annotations.proto";
option csharp_namespace = "NET7GrpcService";

package greet;

service ExampleService {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse){
    option (google.api.http) = {
      post: "/ExampleService/StreamingFromServer",
      body: "*"
    };
  };

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

message ExampleRequest {
  int32 pageIndex = 1;
  int32 pageSize = 2;
  bool isDescending = 3;
}

message ExampleResponse {
  string text = 1;
}
